Fix obvious styling issues on mobile devices

--- a/_sass/elements/_code.scss
+++ b/_sass/elements/_code.scss
@@ -15,7 +15,6 @@ pre {
   font-size: $font-size-medium;
   line-height: $line-height-medium;
   white-space: pre;
-  word-wrap: break-word;
 }
 
 li code,
